# cohere-discord-character

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
src/: bot.py
src/cogs/commands/: cohere.py  dev.py  general.py
src/cogs/listeners/: autoresponder.py
src/utils/: cohere.py  database.py
